# POS-Tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  splash.html  tsconfig.json  vite.config.ts
scripts/: seed_cash_registers.sql  seed_categories.sql  seed_sample_customers.sql  seed_sample_products.sql
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
src-tauri/src/api/: auth.rs  cash_register.rs  customers.rs  inventory.rs  mod.rs  products.rs  reports.rs  sales.rs
src/components/: not_found_page.tsx  sidebar.tsx  topbar.tsx
src/layouts/: DashboardLayout.tsx
src/lib/: api.ts  utils.ts
src/pages/: CashRegisterPage.tsx  CustomersPage.tsx  DashboardPage.tsx  InventoryPage.tsx  LoginPage.tsx  ReportsPage.tsx  SalesPage.tsx  SettingsPage.tsx
src/store/: auth.ts  cart.ts  shift.ts
src/styles/: globals.css
